增加了一系列功能
